--- a/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/View/Chat.cshtml
+++ b/BackEnd_SmartHouseThesis/BackEnd_SmartHouseThesis/View/Chat.cshtml
@@ -1,9 +1,11 @@
 ﻿@page
+@model BackEnd_SmartHouseThesis.View.ChatModel
     <div class="container">
         <div class="row p-1">
             <div class="col-1">User</div>
             <div class="col-5"><input type="text" id="userInput" /></div>
         </div>
+
         <div class="row p-1">
             <div class="col-1">Message</div>
             <div class="col-5"><input type="text" class="w-100" id="messageInput" /></div>
